--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 arboard = "3.4.1"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
+clap = {version = "4.5.23", features = ["derive"]}
